[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/ui/SettingsMenu.gd" id="1_settings"]
[ext_resource type="FontFile" path="res://assets/font/Nunito-Bold.ttf" id="2_font"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.11, 0.13, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 64
text = "SETTINGS_TITLE"
horizontal_alignment = 1

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "SETTINGS_MUSIC"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
step = 1.0
value = 80.0

[node name="SFXContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "SETTINGS_SFX"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SFXContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.0
max_value = 100.0
step = 1.0
value = 80.0

[node name="FullscreenContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="VBoxContainer/FullscreenContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "SETTINGS_FULLSCREEN"

[node name="FullscreenCheckbox" type="CheckBox" parent="VBoxContainer/FullscreenContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32

[node name="LanguageContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LanguageLabel" type="Label" parent="VBoxContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "SETTINGS_LANGUAGE"

[node name="LanguageOption" type="OptionButton" parent="VBoxContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32


[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "BUTTON_BACK"
